# iptfs

./: .dir-locals.el  .gitignore  .pylintrc  Dockerfile  Makefile  NOTICE  README.org  chopps.sh  docker-compose.yml  run.sh  setup.cfg  setup.py  setup.sh
.circleci/: config.yml
.github/workflows/: build-draft.yaml
doc/: gittag-ip-tfs-presentation.pptx  gittag-ipsec-overhead.xlsx  ietf-104-ipsecme.pptx  ietf-105-ipsecme.pptx  ip-tfs-presentation.pptx  ipsec-overhead.xlsx  present.org
draft/: .gitignore  Makefile  draft-chopps-ipsecme-iptfs-00.html  draft-chopps-ipsecme-iptfs-00.txt  draft-chopps-ipsecme-iptfs-00.xml  draft-hopps-ipsecme-iptfs.xml  iptfs.org  ref-appcrypt.xml  references.txt  references.xml  rfcdoc.mk  writeup-draft-iptfs.txt
draft/draft/: draft-ietf-ipsecme-iptfs-01.txt  draft-ietf-ipsecme-iptfs-latest.html  draft-ietf-ipsecme-iptfs-latest.xml
draft/publish/: draft-hopps-ipsecme-iptfs-00.txt  draft-hopps-ipsecme-iptfs-00.xml  draft-hopps-ipsecme-iptfs-01.txt  draft-hopps-ipsecme-iptfs-01.xml  draft-ietf-ipsecme-iptfs-.html  draft-ietf-ipsecme-iptfs-.txt  draft-ietf-ipsecme-iptfs-.xml  draft-ietf-ipsecme-iptfs-00.xml  draft-ietf-ipsecme-iptfs-01.html  draft-ietf-ipsecme-iptfs-01.xml  draft-ietf-ipsecme-iptfs-02.html  draft-ietf-ipsecme-iptfs-02.xml  draft-ietf-ipsecme-iptfs-03.html  draft-ietf-ipsecme-iptfs-03.xml  draft-ietf-ipsecme-iptfs-04.html  draft-ietf-ipsecme-iptfs-04.xml  draft-ietf-ipsecme-iptfs-05.html  draft-ietf-ipsecme-iptfs-05.xml  draft-ietf-ipsecme-iptfs-06.html  draft-ietf-ipsecme-iptfs-06.xml  draft-ietf-ipsecme-iptfs-07.html  draft-ietf-ipsecme-iptfs-07.xml  draft-ietf-ipsecme-iptfs-08.html  draft-ietf-ipsecme-iptfs-08.xml  draft-ietf-ipsecme-iptfs-09.html  draft-ietf-ipsecme-iptfs-09.xml  (+27 more)
iptfs/: __init__.py  __main__.py  bstr.c  iptfs.py  mbuf.py  util.py
src/: iptfs.c  iptfs.h  main.c  mbuf.c  tcptfs.c  util.c
tcptfs/: __main__.py  bstr.c  tcptfs.py
