#
# Copyright (c) 2019, LabN Consulting, L.L.C.
# All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
[metadata]
name = iptfs
author = Christian Hopps
author_email = chopps@gmail.com
summary = Tunnel TFS over TCP
# description-file = README.rst
# home-page = https://github.com/choppsv1/netconf/
license = Apache-2

[files]
packages =
    iptfs

[entry_points]
console_scripts =
    iptfs = iptfs.__main__:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1

[pbr]
autodoc_index_modules = True

[build_sphinx]
all-files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[nosetests]
verbosity=1
with-doctest=1

[tool:pytest]
addopts = --doctest-modules
doctest_optionflags = ALLOW_UNICODE
testpaths = iptfs tests

[coverage:run]
source=iptfs,tests

[yapf]
based_on_style = pep8
coalesce_brackets = True
column_limit = 100
continuation_indent_width = 4
each_dict_entry_on_separate_line = True
space_between_ending_comma_and_closing_bracket = True

[flake8]
max-line-length=100
# E125 continuation line does not distinguish
# E128 continuation line does not distinguish
# E261 at least 2 spaces for inline comment
# enable E302 (expected 2 newlines)
# enable E303 too many blank lines
# F401 unused import caught by pylint if we want it
ignore=E125,E128,E261,F401
